--- a/report/report.tex
+++ b/report/report.tex
@@ -103,12 +103,75 @@ the result of the test, along with a counterexample if found.
 ; ((x 10) (y 10))
 \end{verbatim}
 
+The function \verb|check-with-config| allows checking a property with a custom
+configuration (which contains the maximum number of shrinks and tests to run),
+size (which determines the size of generated inputs), and seed.
+
+\begin{verbatim}
+(check-with-config
+  (make-config 1000 1000)
+  1000
+  (make-random-state #t)
+  prop:addition-commutativity)
+; ok 1000 tests
+\end{verbatim}
+
 \section{Generators}
 
-% talk about types
-% talk about generics idk
-% talk about custom generators
-% talk about distributions
+The file \verb|examples/generator.scm| contains extensive examples of the
+library of built-in generators.
+
+A generator represents a source of values for randomly checking a property.
+Intuitively, it can be thought of as a structure containing two components:
+\begin{itemize}
+\item A generating function \verb|size -> seed -> value|
+\item A shrinking function \verb|value -> list value|
+\end{itemize}
+A generating function alone is not a generator object, for a generator object
+must return a lazy tree of values. To create a generator without dealing with
+lazy tree internals, we would need to call library functions.
+
+Suppose one had a generating function \verb|gen|. The simplest way to make a
+generator would be to call \verb|(no-shrink gen)|, which returns a generator
+object that does not have a shrinker.
+
+\begin{verb}
+(define gen-1 (no-shrink (lambda (size seed) 1)))
+(print-lazy-tree (generate gen-1))
+\end{verb}
+
+We can reigster a generator with a type by calling \verb|set-generator!|. This
+allows it to be called with \verb|arbitrary|, a generic function.
+
+\begin{verb}
+(set-generator! 'type-1 gen-1)
+(print-lazy-tree (generate (arbitrary 'type-1)))
+(check (forall (x type-1) (= x 1)))
+\end{verb}
+
+To replace the shrink function of a generator with a specified shrink function
+\verb|shrink|, we call \verb|replace-shrink-tree shrink| with the generator.
+
+\begin{verb}
+(define (shrink-fn value) (case value ((1) (list 0)) ((0) (list))))
+(define gen-2 ((replace-shrink-tree shrink-fn) gen-1))
+(print-lazy-tree (generate gen-2))
+\end{verb}
+
+We can also create parametrized generators. The function \verb|arbitrary|, when
+given a list of symbols, will instead search for a handler for the first symbol,
+to be called on the list of the remaining symbols as arguments, expecting a
+generator returned.
+
+\begin{verb}
+(define (gen-constant val) (no-shrink (lambda (size seed) val)))
+(set-generator! 'type-constant (lambda (val) (gen-constant val)))
+(print-lazy-tree (generate (arbitrary ('type-constant 1))))
+\end{verb}
+
+Note that the type of generators forms a monad. The monad methods are in the
+library as \verb|gen:pure| and \verb|gen:bind|; we also provide convenience
+functions \verb|gen:map|, \verb|gen:apply|, \verb|gen:list|, etc.
 
 \section{Shrinkers}
 
