Make code more consistent

--- a/report/report.tex
+++ b/report/report.tex
@@ -207,7 +207,7 @@ generator returned.
 
 Note that the type of generators forms a monad. The monad methods are in the
 library as \verb|gen:pure| and \verb|gen:bind|; we also provide convenience
-functions \verb|gen:map|, \verb|gen:apply|, \verb|gen:list|, etc.
+functions \verb|gen:map|, \verb|gen:apply|, \verb|gen:collect|, etc.
 
 \subsection{Internals}\label{sec:generator-internals}
 \subsubsection{Rationale}
